--- a/index.html
+++ b/index.html
@@ -244,8 +244,9 @@
         </section>
         <section id="Serviços" class="bg-blue-1 pb-5">
             <div class="tittle text-center">
-                <span class="badge badge-roxo mt-3 mb-3">Nossos Serviços</span>
-                <h1 class="fs-2 fw-800">Cuidado especializado com</h1>
+                <span class="badge badge-roxo mt-4 mb-3">Nossos Serviços</span>
+                <h1 class="fs-2 fw-800 mb-3">Tratamento completo e especializado</h1>
+                <p class="text-color-1">Oferecemos uma gama completa de serviços para garantir a recuperação efetiva e duradoura de nossos pacientes.</p>
             </div>
 
             <div class="mt-4 d-flex flex-wrap gap-4 justify-center">
@@ -298,7 +299,7 @@
             <div class="container">
                 <div class="tittle text-center mb-5 container">
                     <span class="badge badge-verde mt-3 mb-3">Nossas Unidades</span>
-                    <h1 class="fs-2 fw-800 mb-2">Presença nacional através de clínicas parceiras</h1>
+                    <h1 class="fs-2 fw-800 mb-3">Presença nacional através de clínicas parceiras</h1>
                     <span class="text-color-1">Através de nossa rede de clínicas parceiras especializadas, oferecemos
                         tratamento de excelência em diversas regiões do Brasil. Entre em contato conosco e
                         direcionaremos
