--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <meta property="og:description"
             content="Clínica especializada em tratamento de dependência química para homens. Estrutura completa, equipe qualificada e acolhimento humanizado.">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://gruporedencao.com/">
-        <meta property="og:image" content="https://gruporedencao.com/assets/images/logo.jpg">
+        <meta property="og:url" content="https://gruporedencao.com.br/">
+        <meta property="og:image" content="https://gruporedencao.com.br/assets/images/logo.jpg">
 
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Grupo Redenção | Clínica de Recuperação Masculina">
         <meta name="twitter:description"
             content="Tratamento humanizado para dependência química masculina. Grupo Redenção, uma nova chance de viver.">
-        <meta name="twitter:image" content="https://gruporedencao.com/images/og-image.jpg">
+        <meta name="twitter:image" content="https://gruporedencao.com.br/images/og-image.jpg">
 
         <!-- Canonical -->
-        <link rel="canonical" href="https://gruporedencao.com/">
+        <link rel="canonical" href="https://gruporedencao.com.br/">
 
         <!-- Título -->
         <title>Grupo Redenção | Clínica de Recuperação Masculina para Dependentes Químicos</title>
@@ -56,9 +56,9 @@
         "@context": "https://schema.org",
         "@type": "MedicalClinic",
         "name": "Grupo Redenção",
-        "url": "https://gruporedencao.com/",
-        "logo": "https://gruporedencao.com/images/logo.png",
-        "image": "https://gruporedencao.com/images/og-image.jpg",
+        "url": "https://gruporedencao.com.br/",
+        "logo": "https://gruporedencao.com.br/images/logo.png",
+        "image": "https://gruporedencao.com.br/images/og-image.jpg",
         "description": "Clínica de recuperação masculina especializada no tratamento da dependência química, oferecendo acompanhamento terapêutico e suporte profissional.",
         "address": {
             "@type": "PostalAddress",
@@ -122,7 +122,7 @@
             </nav>
 
             <div class="nav_buttons">
-                <button class="btn-outline-blue">(11) 99900-0000</button>
+                <button class="btn-outline-blue">(71) 98290-0675</button>
                 <button class="btn-gradient">Agendar Consulta</button>
             </div>
         </header>
@@ -149,7 +149,7 @@
 
                     <div class="d-flex gap-4 mt-5" id="contadores">
                         <div class="text-center">
-                            <div class="fw-900 fs-2">500+</div>
+                            <div class="fw-900 fs-2">1000+</div>
                             <div class="text-color-1 mt-1">Vidas Transformadas</div>
                         </div>
 
@@ -196,9 +196,7 @@
                     </div>
                     <div class="main-frase mt-4">
                         <p class="text-color-1">
-                            Nossa clínica é referência no tratamento de dependência química, oferecendo um ambiente
-                            acolhedor e
-                            seguro para a recuperação completa de nossos pacientes.
+                            Nossas clínicas parceiras são referência no tratamento de dependências químicas, oferecendo ambientes acolhedores e seguros para a recuperação completa dos pacientes.
                         </p>
                     </div>
                     <div class="mt-2">
@@ -315,7 +313,7 @@
                                 <span class="text-color-1">Região Sudeste</span>
                             </div>
                             <div>
-                                <span class="badge badge-cinza fw-600">2 cidades</span>
+                                <span class="badge badge-cinza fw-600">3 cidades</span>
                             </div>
                         </div>
                         <div class="mt-3">
@@ -323,6 +321,7 @@
                             <div class="mt-2 d-flex flex-wrap gap-2">
                                 <span class="badge badge-cinza border-none">São Paulo</span>
                                 <span class="badge badge-cinza border-none">Guarulhos</span>
+                                <span class="badge badge-cinza border-none">Xangri-lá</span>
                             </div>
                         </div>
                         <hr>
@@ -441,11 +440,11 @@
                     </div>
 
                     <!-- Xangri-lá (RS) -->
-                    <div class="card-region hover-lift border-top-purple">
+                    <!-- <div class="card-region hover-lift border-top-purple">
                         <div class="d-flex justify-between">
                             <div class="d-flex flex-column">
                                 <span class="fw-700">🌊 Xangri-lá</span>
-                                <span class="text-color-1">Região Sul</span>
+                                <span class="text-color-1">Região Sudeste</span>
                             </div>
                             <div>
                                 <span class="badge badge-cinza fw-600">1 cidade</span>
@@ -460,7 +459,7 @@
                         <hr>
                         <span class="text-color-1 small">Entre em contato para ser direcionado à unidade mais
                             próxima</span>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="carousel-container">
                     <div class="carousel" id="clinicCarousel">
@@ -568,7 +567,7 @@
                             </div>
                             <div>
                                 <p class="fw-600">Telefone</p>
-                                <span class="text-color-1">(11) 99999-0000</span>
+                                <span class="text-color-1">(71) 98290-0675</span>
                             </div>
                         </div>
                         <div class="d-flex gap-3 align-center">
@@ -577,7 +576,7 @@
                             </div>
                             <div>
                                 <p class="fw-600">Email</p>
-                                <span class="text-color-1">contato@gruporedencao.com</span>
+                                <span class="text-color-1">contato@gruporedencao.com.br</span>
                             </div>
                         </div>
                         <div class="d-flex gap-3 align-center">
