--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                                 <span class="text-color-1">Região Sudeste</span>
                             </div>
                             <div>
-                                <span class="badge badge-cinza fw-600">3 cidades</span>
+                                <span class="badge badge-cinza fw-600">2 cidades</span>
                             </div>
                         </div>
                         <div class="mt-3">
@@ -320,7 +320,6 @@
                             <div class="mt-2 d-flex flex-wrap gap-2">
                                 <span class="badge badge-cinza border-none">São Paulo</span>
                                 <span class="badge badge-cinza border-none">Guarulhos</span>
-                                <span class="badge badge-cinza border-none">Xangri-lá</span>
                             </div>
                         </div>
                         <hr>
@@ -438,8 +437,8 @@
                             próxima</span>
                     </div>
 
-                    <!-- Xangri-lá (RS) -->
-                    <!-- <div class="card-region hover-lift border-top-purple">
+                    <!--Xangri-lá (RS) -->
+                    <div class="card-region hover-lift border-top-purple">
                         <div class="d-flex justify-between">
                             <div class="d-flex flex-column">
                                 <span class="fw-700">🌊 Xangri-lá</span>
@@ -458,7 +457,7 @@
                         <hr>
                         <span class="text-color-1 small">Entre em contato para ser direcionado à unidade mais
                             próxima</span>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="carousel-container">
                     <div class="carousel" id="clinicCarousel">
