updates google analytics

--- a/index.html
+++ b/index.html
@@ -2,51 +2,58 @@
 <html lang="pt-br">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FBSBT8ZG80"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        gtag('config', 'G-FBSBT8ZG80');
+    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- SEO Básico -->
-        <meta name="description"
-            content="O Grupo Redenção é uma clínica de recuperação masculina para dependentes químicos. Tratamento humanizado, seguro e acolhedor para homens que buscam libertação e recomeço.">
-        <meta name="keywords"
-            content="clínica de reabilitação, clínica para dependentes químicos, recuperação masculina, tratamento para drogas, alcoolismo, clínica terapêutica, Grupo Redenção, reabilitação masculina">
-        <meta name="author" content="Grupo Redenção">
-        <meta name="robots" content="index, follow">
-        <meta name="googlebot" content="index, follow">
+    <!-- SEO Básico -->
+    <meta name="description"
+        content="O Grupo Redenção é uma clínica de recuperação masculina para dependentes químicos. Tratamento humanizado, seguro e acolhedor para homens que buscam libertação e recomeço.">
+    <meta name="keywords"
+        content="clínica de reabilitação, clínica para dependentes químicos, recuperação masculina, tratamento para drogas, alcoolismo, clínica terapêutica, Grupo Redenção, reabilitação masculina">
+    <meta name="author" content="Grupo Redenção">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
 
-        <!-- Open Graph (Facebook, WhatsApp, LinkedIn etc.) -->
-        <meta property="og:title" content="Grupo Redenção | Clínica de Recuperação Masculina">
-        <meta property="og:description"
-            content="Clínica especializada em tratamento de dependência química para homens. Estrutura completa, equipe qualificada e acolhimento humanizado.">
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://gruporedencao.com.br/">
-        <meta property="og:image" content="https://gruporedencao.com.br/assets/images/logo.jpg">
+    <!-- Open Graph (Facebook, WhatsApp, LinkedIn etc.) -->
+    <meta property="og:title" content="Grupo Redenção | Clínica de Recuperação Masculina">
+    <meta property="og:description"
+        content="Clínica especializada em tratamento de dependência química para homens. Estrutura completa, equipe qualificada e acolhimento humanizado.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gruporedencao.com.br/">
+    <meta property="og:image" content="https://gruporedencao.com.br/assets/images/logo.jpg">
 
-        <!-- Twitter Card -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="Grupo Redenção | Clínica de Recuperação Masculina">
-        <meta name="twitter:description"
-            content="Tratamento humanizado para dependência química masculina. Grupo Redenção, uma nova chance de viver.">
-        <meta name="twitter:image" content="https://gruporedencao.com.br/images/og-image.jpg">
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Grupo Redenção | Clínica de Recuperação Masculina">
+    <meta name="twitter:description"
+        content="Tratamento humanizado para dependência química masculina. Grupo Redenção, uma nova chance de viver.">
+    <meta name="twitter:image" content="https://gruporedencao.com.br/images/og-image.jpg">
 
-        <!-- Canonical -->
-        <link rel="canonical" href="https://gruporedencao.com.br/">
+    <!-- Canonical -->
+    <link rel="canonical" href="https://gruporedencao.com.br/">
 
-        <!-- Título -->
-        <title>Grupo Redenção | Clínica de Recuperação Masculina para Dependentes Químicos</title>
+    <!-- Título -->
+    <title>Grupo Redenção | Clínica de Recuperação Masculina para Dependentes Químicos</title>
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="src/css/style.css">
-        <!-- <link rel="stylesheet" href="css/performance.css"> -->
+    <!-- CSS -->
+    <link rel="stylesheet" href="src/css/style.css">
+    <!-- <link rel="stylesheet" href="css/performance.css"> -->
 
-        <!-- Google Fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-        <!-- Schema.org JSON-LD -->
-        <script type="application/ld+json">
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
         {
         "@context": "https://schema.org",
         "@type": "MedicalClinic",
@@ -69,26 +76,25 @@
         }
         }
         </script>
-        <!-- Favicon padrão (antigos navegadores e fallback) -->
-        <link rel="icon" href="assets/images/favicon/favicon.ico" type="image/x-icon">
+    <!-- Favicon padrão (antigos navegadores e fallback) -->
+    <link rel="icon" href="assets/images/favicon/favicon.ico" type="image/x-icon">
 
-        <!-- PNGs para navegadores modernos -->
-        <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/logo-favicon-16x16.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/logo-favicon-32x32.png">
+    <!-- PNGs para navegadores modernos -->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/logo-favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/logo-favicon-32x32.png">
 
-        <!-- Android/Chrome -->
-        <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicon/logo-android-chrome-192x192.png">
-        <link rel="icon" type="image/png" sizes="512x512" href="assets/images/favicon/logo-android-chrome-512x512.png">
+    <!-- Android/Chrome -->
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/images/favicon/logo-android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/images/favicon/logo-android-chrome-512x512.png">
 
-        <!-- Apple (iOS) -->
-        <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/logo-apple-touch-icon.png">
+    <!-- Apple (iOS) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/logo-apple-touch-icon.png">
 
-        <!-- Manifest (PWA) -->
-        <link rel="manifest" href="assets/images/favicon/site.webmanifest">
-
-    </head>
+    <!-- Manifest (PWA) -->
+    <link rel="manifest" href="assets/images/favicon/site.webmanifest">
 
 </head>
+
 
 <body>
     <div id="root">
